# rust-web

./: .gitignore  CONTRIBUTING.md  Project_details.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: java-spring-compat.md  migration-from-spring.md
example/: Cargo.toml  application.properties
example/src/: main.rs
initializer/src/: main.rs
spring-aop/src/: lib.rs
spring-aop/src/aspect/: pointcut.rs
spring-aop/src/framework/: aop_config.rs
spring-aop/src/proxy/: aop_proxy.rs
spring-beans/src/: lib.rs
spring-beans/src/bean/: bean_post_processor.rs  bean_post_processor_register.rs  mod.rs
spring-beans/src/env/: environment.rs  mod.rs
spring-beans/src/error/: autowire_error.rs  mod.rs  property_access_error.rs
spring-beans/src/factory/: bean_factory.rs  listable_bean_factory.rs  mod.rs
spring-boot/src/: application.rs  lib.rs
spring-boot/tests/: spring_lifecycle_contract.rs  spring_spec_core.rs  spring_spec_required_contracts.rs
spring-context/src/context/: application_context.rs  lifecycle.rs  mod.rs  (+1 more)
spring-data/src/: lib.rs
spring-expression/src/: lib.rs
spring-macro/: Cargo.toml
spring-macro/src/: accessors.rs  all_args_constructor.rs  aspect.rs  bean.rs  component.rs  data.rs  lib.rs  repository.rs  setter.rs  value.rs  web.rs
spring-macro/tests/: trybuild.rs
spring-macro/tests/ui/: component_invalid_scope.rs  web_invalid_signature.rs
spring-web/: Cargo.toml
spring-web/src/: lib.rs  method.rs  request.rs  response.rs  router.rs  server.rs  status.rs
starter/basic/: Cargo.toml  README.md  application.properties
(+24 files in other folders)
