[package]
name = "example"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
spring-macro = { path = "../spring-macro" }
spring-beans = { path = "../spring-beans" }
spring-boot = { path = "../spring-boot" }
spring-context = { path = "../spring-context" }
inventory = { workspace = true }

# volunteer_query_demo dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = { version = "25", default-features = true, features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
