[package]
name = "spring-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
inventory = { workspace = true }
spring-util = { path = "../spring-util" }
spring-aop = { path = "../spring-aop" }

[dev-dependencies]
trybuild = "1"
