[package]
name = "spring-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
spring-context = { path = "../spring-context" }
inventory      = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
